--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,24 @@
 [tox]
-envlist = py38,py39,py310,lint
+envlist = py310,lint
 
 [testenv]
 deps =
     pytest
+    pytest-cov
 commands = pytest
 
 [testenv:lint]
 basepython = python3.10
 deps =
     flake8
-commands = flake8 iaml/ tests/
+commands = flake8 iaeml/ tests/
 
 [flake8]
-exclude = .tox,*.egg,build,data
-select = E,W,F
+max-line-length = 120
+extend-ignore = E203, W503
+exclude =
+    .tox,
+    .venv,
+    build,
+    dist,
+    .eggs
